# booklet

./: Admin.py  Home.py  config.yaml  country_facts.py  dms_map.html  groups.py  indicators.py  maps.py  pyproject.toml  quotes.py
cache/: BN.CAB.XOKA.CD_ldcs.json  BX.KLT.DINV.WD.GD.ZS_ldcs.json  BX.KLT.DINV.WD.GD.ZS_lldcs.json  DT.DOD.DECT.CD_lldcs.json  DT.ODA.ODAT.GN.ZS_lldcs.json  EN.ATM.CO2E.KT_ldcs.json  EN.ATM.CO2E.KT_lldcs.json  EN.ATM.CO2E.PC_ldcs.json  EN.ATM.CO2E.PC_lldcs.json  FP.CPI.TOTL.ZG_lldcs.json  GC.DOD.TOTL.CN_lldcs.json  IC.EXP.CSBC.CD_lldcs.json  IC.IMP.TMBC_ldcs.json  IC.IMP.TMBC_lldcs.json  IT.CEL.SETS.P2_ldcs.json  IT.CEL.SETS.P2_lldcs.json  IT.NET.BBND.P2_ldcs.json  IT.NET.BBND.P2_lldcs.json  LP.EXP.DURS.MD_lldcs.json  LP.LPI.OVRL.XQ_ldcs.json  LP.LPI.OVRL.XQ_lldcs.json  NE.TRD.GNFS.CD_lldcs.json  NY.GDP.MKTP.PP.CD_ldcs.json  NY.GDP.MKTP.PP.CD_lldcs.json  NY.GDP.PCAP.PP.CD_lldcs.json  SE.PRM.NENR_ldcs.json  SL.TLF.CACT.FM.ZS_ldcs.json  SL.TLF.CACT.FM.ZS_lldcs.json  SL.UEM.TOTL.ZS_ldcs.json  SL.UEM.TOTL.ZS_lldcs.json  SP.POP.TOTL_ldcs.json  SP.POP.TOTL_lldcs.json  countries.json
cache/groups/: acd.json  ag.json  aosis.json  ap.json  brics.json  can.json  caricom.json  cegpl.json  eac.json  g77.json  grulac.json  ida.json  ioc.json  ldcs.json  lldcs.json  mercosur.json  nam.json  (+8 more)
country_groups/: __init__.py  acp.json  asean.json  au.json  canz.json  cplp.json  cw.json  ecowas.json  eu.json  g20.json  g24.json  gcc.json  groups.py  hics.json  las.json  lics.json  lmcs.json  oecd.json  pif.json  sica.json  sids.json  weog.json  zangger.json
(+21 files in other folders)
