[tool.poetry]
name = "booklet"
version = "0.1.0"
description = ""
authors = ["Tomas Gonzalez <tomasgonz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
