[tool.poetry]
name = "booklet"
version = "0.1.0"
description = ""
authors = ["Tomas Gonzalez <tomasgonz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
streamlit = "^1.37.0"
watchdog = "^4.0.1"
folium = "^0.17.0"
streamlit-folium = "^0.22.0"
fpdf = "^1.7.2"
html2text = "^2024.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
